# DEDLUtils

./: pyproject.toml
.ipynb_checkpoints/: README-checkpoint.md
src/DEDLUtils/: dedl_utilities.py
