[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
exclude = [
  "*.ipynb_checkpoints",
  ".github",
  ".gitignore"
]

[project]
name = "DEDLUtils"
version = "0.0.2"
authors = [
  { name="Serena Avolio", email="serena.avolio@external.eumetsat.int" },
]
description = "DEDL utilities package"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "requests",
  "json5",
  "urllib3",
  "ipywidgets",
  "IPython",
  "rich"
]

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/serenaateum/DEDLUtils"
Issues = "https://github.com/serenaateum/DEDLUtils/issues"